[gd_scene load_steps=8 format=2]

[ext_resource path="res://Resource/Image/banzan_logo.png" type="Texture" id=1]
[ext_resource path="res://scripts/SplashScreen.gd" type="Script" id=2]
[ext_resource path="res://Resource/Icon/loading_static.png" type="Texture" id=3]
[ext_resource path="res://scripts/LoadingScreenBG.gd" type="Script" id=4]
[ext_resource path="res://Resource/Font/loadingText.tres" type="DynamicFont" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="SplashScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BanzanLogo" type="AnimatedSprite" parent="."]
position = Vector2( 288, 512 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.5
autostart = true

[node name="LoadingScreenBG" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.0470588, 0.254902, 0.47451, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoaderTimer" type="Timer" parent="LoadingScreenBG"]
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="LoadingScreenBG"]
position = Vector2( 288, 512 )
frames = SubResource( 2 )

[node name="LoadingTween" type="Tween" parent="LoadingScreenBG"]

[node name="CenterContainer" type="CenterContainer" parent="LoadingScreenBG"]
margin_top = 590.0
margin_right = 576.0
margin_bottom = 630.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LoadingScreenBG/CenterContainer"]
margin_left = 233.0
margin_top = 4.0
margin_right = 343.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 5 )
text = "Loading...."
align = 1

[node name="StartGame" type="Timer" parent="LoadingScreenBG"]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LoadingScreenBG/LoaderTimer" to="LoadingScreenBG" method="_on_LoaderTimer_timeout"]
[connection signal="timeout" from="LoadingScreenBG/StartGame" to="LoadingScreenBG" method="_on_StartGame_timeout"]
